# EvoGPT

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESUME_BULLETS.md  TECHNICAL.md  WALKTHROUGH.md  analyze.py  download_data.py  make_report.py  pyproject.toml  requirements.txt  run_search.py  sample.py
.github/workflows/: ci.yml
evogpt/: __init__.py  data.py  evolve.py  model.py  morph.py  train.py
experiments/: _common.py  compare_v2.py  run_all.py  viz_lineage.py
results/: REPORT.md  champion.json
results/experiments/: compare_search.json  inheritance_ab.json  proxy_fidelity.json  summary.json
tests/: conftest.py  test_data.py  test_evolve.py  test_model.py  test_morph.py  test_smoke.py
